Image source test

--- a/index.html
+++ b/index.html
@@ -48,37 +48,37 @@ div.WordSection1
 
 <p class=MsoNormal>Interest in IT</p>
 
-<p class=MsoNormal>I never realised that I had an interest in IT.  While I was
-growing up in the 1980’s, my father ran a successful software services
-company.  This meant that we always had computers in the house, and he would
-sit in front of a DOS screen for hours.  As far as I was aware, every house had
-this!  Loading games via 25 floppy disks just to fly an x-wing fighter in 16
-VGA colour was normal, right? When I got to school in the mid 80’s, I didn’t
-understand why there was only one computer for the whole school.  And who was
+<p class=MsoNormal>I never realised that I had an interest in IT.Â  While I was
+growing up in the 1980â€™s, my father ran a successful software services
+company.Â  This meant that we always had computers in the house, and he would
+sit in front of a DOS screen for hours.Â  As far as I was aware, every house had
+this!Â  Loading games via 25 floppy disks just to fly an x-wing fighter in 16
+VGA colour was normal, right? When I got to school in the mid 80â€™s, I didnâ€™t
+understand why there was only one computer for the whole school.Â  And who was
 Carmen Santiago? </p>
 
 <p class=MsoNormal>By the time I left school, my computer skills meant that my
-first job in 1997 was a 1<sup>st</sup> Level Helpdesk Support role.  It was
+first job in 1997 was a 1<sup>st</sup> Level Helpdesk Support role.Â  It was
 during this work experience that I realised, not everyone had the computer
-skills that I had.  Not everyone grew up with computer parts lying around the
+skills that I had.Â  Not everyone grew up with computer parts lying around the
 house that you could build a computer from. I worked in desktop, software and
 printer support for about 11 years (going between coordination, hardware
-management and small business support).  But I never “loved” the work.  I was
+management and small business support).Â  But I never â€œlovedâ€ the work.Â  I was
 just using the skills that I had developed naturally in my home environment.</p>
 
-<p class=MsoNormal>But then I discovered Data Administration and Management. 
-It wasn’t the same installation and support process day in and day out like IT
-support.  I was making sure that business data was accurate, working and able to
-be used for analysis.  Being able to make data “clean” and usable really made
+<p class=MsoNormal>But then I discovered Data Administration and Management.Â 
+It wasnâ€™t the same installation and support process day in and day out like IT
+support.Â  I was making sure that business data was accurate, working and able to
+be used for analysis.Â  Being able to make data â€œcleanâ€ and usable really made
 me feel like I had achieved something. I discovered that what made me really
 excited was a clean process, a clean data set and valid insights from the usage
 of that data.</p>
 
-<p class=MsoNormal>I’ve come to RMIT through Open Universities.  RMIT has a
-great reputation locally here in Melbourne.  When I enrolled in the first unit,
+<p class=MsoNormal>Iâ€™ve come to RMIT through Open Universities.Â  RMIT has a
+great reputation locally here in Melbourne.Â  When I enrolled in the first unit,
 I discovered my Dad had studied at RMIT 30 years ago! How did I not know this?
-This is my second unit through RMIT.  I am hoping to do down the path of Data
-Analytics.  I want to work with big data sets and use predictive modelling to
+This is my second unit through RMIT.Â  I am hoping to do down the path of Data
+Analytics.Â  I want to work with big data sets and use predictive modelling to
 produce interesting insights.</p>
 
 <p class=MsoNormal>&nbsp;</p>
@@ -89,7 +89,7 @@ produce interesting insights.</p>
 href="https://www.glassdoor.com.au/job-listing/senior-data-analyst-scientist-international-institute-of-data-analytics-JV_IC2235932_KO0,29_KE30,71.htm?jl=3201655445&amp;ctt=1560559367182">https://www.glassdoor.com.au/job-listing/senior-data-analyst-scientist-international-institute-of-data-analytics-JV_IC2235932_KO0,29_KE30,71.htm?jl=3201655445&amp;ctt=1560559367182</a></p>
 
 <p class=MsoNormal><img border=0 width=624 height=313 id="Picture 1"
-src="index_files/image001.jpg"></p>
+src="https://photos.app.goo.gl/XBipbfdoQ5eoSCTv9"></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -98,19 +98,19 @@ Analyst. Working with an NGO or Not For Profit would be an extra sweetener.</p>
 
 <p class=MsoNormal>Working in a role that would require the understanding of
 requirements of a project or business plan and formulating a way to produce
-analytical models to support them would be incredibly rewarding.  Getting into
+analytical models to support them would be incredibly rewarding.Â  Getting into
 the detail of the data and producing insights, trends and understanding how
-they all fit together would also tick my process nerd boxes.  But getting
+they all fit together would also tick my process nerd boxes.Â  But getting
 different data sets and sources to link together would be the best part of a
-job as a Senior Data Analyst.  Sharing this excitement about data and
+job as a Senior Data Analyst.Â  Sharing this excitement about data and
 business/project process flow and how to produce data analysis to direct the
 plan while mentoring Junior Data Analysts would also be part of my ideal role.</p>
 
 <p class=MsoNormal>The kind of skills and qualifications that would be required
 to be successful in this type of role would be a collection of technical and collaboration
-skills.  First, a degree in IT, Maths or Statistics.  Then a Senior Data
+skills.Â  First, a degree in IT, Maths or Statistics. Â Then a Senior Data
 Analyst would also need an ability to theorise and build data modelling
-processes.  In order to produce these models, a Senior Data Analyst would need
+processes.Â  In order to produce these models, a Senior Data Analyst would need
 to know how to get different data sets from different sources to combine into
 something that can be analysed.</p>
 
@@ -119,11 +119,11 @@ understanding business/project requirements, develop working relationships with
 the teams/people that provide details about the requirements and be able to
 manage a team to produce what the business/project is expecting.</p>
 
-<p class=MsoNormal>My aim is to first get a Degree in IT.  I would like to
-major in Data Analytics and include some kind of statistical analysis.  Machine
+<p class=MsoNormal>My aim is to first get a Degree in IT.Â  I would like to
+major in Data Analytics and include some kind of statistical analysis.Â  Machine
 learning and algorithm development is something I want to get my head around.
 Once I have completed my degree, I am going to build on my current business
-Data Skills.  Hopefully dive into a big data set, get cosy with the details of
+Data Skills.Â  Hopefully dive into a big data set, get cosy with the details of
 how the data has been produced and managed and work hard at building my
 modelling and analysis experience.</p>
 
@@ -131,19 +131,19 @@ modelling and analysis experience.</p>
 
 <p class=MsoNormal>Personal Profile</p>
 
-<p class=MsoNormal>I’m pretty hesitant about online personality and aptitude
-tests.  It’s very hard to determine how someone learns or listens when it is
-only being done via an online interface.  Especially if they are free!</p>
+<p class=MsoNormal>Iâ€™m pretty hesitant about online personality and aptitude
+tests.Â  Itâ€™s very hard to determine how someone learns or listens when it is
+only being done via an online interface.Â  Especially if they are free!</p>
 
-<p class=MsoNormal>But personality testing is big business!  A lot of job
-interview processes that I have been through required the Myers Briggs test. 
-There are all kinds of articles about why this test is not all that relevant. 
+<p class=MsoNormal>But personality testing is big business!Â  A lot of job
+interview processes that I have been through required the Myers Briggs test.Â 
+There are all kinds of articles about why this test is not all that relevant.Â 
 The mother and daughter who developed it were not trained psychologists, the
-results put people’s personality into binary categorisations and it doesn’t
+results put peopleâ€™s personality into binary categorisations and it doesnâ€™t
 allow for the fluidity and complexity of people and their experiences. The Jung
 theories it is based on, were even questioned by Jung! Every time I do the
-Myers Briggs, I get a different result.  I am introverted, until I am really
-excited.  But I always get an introverted score.  Is that because I reason
+Myers Briggs, I get a different result.Â  I am introverted, until I am really
+excited.Â  But I always get an introverted score.Â  Is that because I reason
 things out myself before sound boarding it on someone? Who knows? But I really
 feel that Myers Briggs is an overblown, over rated, ridiculous way of finding
 out about someone.</p>
@@ -158,7 +158,7 @@ team? Nope.</p>
 
 <p class=MsoNormal>If someone was really excited about personality tests, would
 I take that into account when assessing their relevance to a team? I sure
-would!  It would be a solid no from me.</p>
+would!Â  It would be a solid no from me.</p>
 
 <p class=MsoNormal>Myers Briggs Test</p>
 
@@ -166,8 +166,8 @@ would!  It would be a solid no from me.</p>
 src="index_files/image002.jpg"></p>
 
 <p class=MsoNormal>An ISTJ are apparently punctual, introspective, step-by-step
-type people.  They are “at home with the facts” and use procedures that have
-evidence that it works.  They don’t deal well with inconsistency and can make
+type people.Â  They are â€œat home with the factsâ€ and use procedures that have
+evidence that it works.Â  They donâ€™t deal well with inconsistency and can make
 tough calls and stick to them.</p>
 
 <p class=MsoNormal><a href="http://www.humanmetrics.com/personality/istj">http://www.humanmetrics.com/personality/istj</a></p>
@@ -201,66 +201,66 @@ src="index_files/image004.jpg"></p>
 <p class=MsoNormal>Project Idea</p>
 
 <p class=MsoNormal>I have recently been involved in an experience with local
-council. I have a Beagle.  Beagles like to bark. A lot. They also like to
-howl.  We have worked very hard on training our dog to not bark all the time. 
-We had direct reaction and redirection to her every time she barked.  We
+council. I have a Beagle.Â  Beagles like to bark. A lot. They also like to
+howl.Â  We have worked very hard on training our dog to not bark all the time.Â 
+We had direct reaction and redirection to her every time she barked.Â  We
 created obstacles throughout the yard so that she could not get to the parts of
-the boundary where she liked to bark.  We introduced a citronella collar that
-would spray her every time she barked.  It was a long process, but by the time
-she was 18 months to 2 years old, our efforts paid off.  We now have a dog that
+the boundary where she liked to bark.Â  We introduced a citronella collar that
+would spray her every time she barked.Â  It was a long process, but by the time
+she was 18 months to 2 years old, our efforts paid off.Â  We now have a dog that
 still barks, but not consistently and not causing any affect to our
-neighbours.  She is pretty well behaved.</p>
+neighbours.Â  She is pretty well behaved.</p>
 
-<p class=MsoNormal>However, a neighbour got a new dog.  That barks.  All day,
-all night.  So much so we feel terrible for them.  Every now and then, our dog
-responds to the neighbours dog barking.  Other neighbours have reported this
-neighbour to the council.  One of the responses from the barking dog neighbour
+<p class=MsoNormal>However, a neighbour got a new dog.Â  That barks.Â  All day,
+all night.Â  So much so we feel terrible for them.Â  Every now and then, our dog
+responds to the neighbours dog barking.Â  Other neighbours have reported this
+neighbour to the council.Â  One of the responses from the barking dog neighbour
 to the council was that our dog provoked their dog into barking.</p>
 
-<p class=MsoNormal>I knew this was not the case.  But how on earth could I
-prove it?  I would start to video when the neighbours dog was barking (which
+<p class=MsoNormal>I knew this was not the case.Â  But how on earth could I
+prove it?Â  I would start to video when the neighbours dog was barking (which
 there was ample opportunity), and there would be my dog in the video, doing her
-thing, but not barking.  However, the arbritary nature of when I did and didn’t
+thing, but not barking.Â  However, the arbritary nature of when I did and didnâ€™t
 video, did not lend any credibility to my argument that it was not my dog. So,
-we were asked by the council to provide a “diary” of the barking.  Both ours
-and the neighbours dog.  So every time my dog barked or the neighbours dog
-barked, I had to note it in the diary.  Council uses these diaries to see if
-they “match” with another neighbour that was also keeping a diary.</p>
+we were asked by the council to provide a â€œdiaryâ€ of the barking.Â  Both ours
+and the neighbours dog.Â  So every time my dog barked or the neighbours dog
+barked, I had to note it in the diary.Â  Council uses these diaries to see if
+they â€œmatchâ€ with another neighbour that was also keeping a diary.</p>
 
 <p class=MsoNormal>This approach to data collection was obviously not going to
-be consistent or accurate.  People aren’t home all the time, people can fill
-out the diary when they feel like it.  Or they can falsify the information they
+be consistent or accurate.Â  People arenâ€™t home all the time, people can fill
+out the diary when they feel like it.Â  Or they can falsify the information they
 were noting in the diary.</p>
 
 <p class=MsoNormal>What if there was a way for council to know that the barking
-was being tracked correctly and how often a dog barks?  What if they could know
+was being tracked correctly and how often a dog barks?Â  What if they could know
 if the information was being collected consistently?</p>
 
-<p class=MsoNormal>How about a collar that collects the data!  It knows when a
-dog is barking and it notes the time, the date and how much barking there was. 
+<p class=MsoNormal>How about a collar that collects the data!Â  It knows when a
+dog is barking and it notes the time, the date and how much barking there was.Â 
 It notes the time, date and length that the bark collar was turned on and on a
-dog because it can recognise temperature and therefore know that it is on a dog’s
+dog because it can recognise temperature and therefore know that it is on a dogâ€™s
 neck.</p>
 
-<p class=MsoNormal> This data can be collected and used by the dog owner and
-provided to council.  No more hand diaries, no more she said, he said, and they
+<p class=MsoNormal>Â This data can be collected and used by the dog owner and
+provided to council.Â  No more hand diaries, no more she said, he said, and they
 can issue nuisance dog fines, or dismiss neighbours allegations with accurate
-data!  This could also be used for dog training.  We never knew how much our
-dog was barking when we were not home.  This app would tell you the problem
-times so that you can customise your training.  It could also be integrated
+data!Â  This could also be used for dog training.Â  We never knew how much our
+dog was barking when we were not home.Â  This app would tell you the problem
+times so that you can customise your training.Â  It could also be integrated
 with a citronella collar which can let the dog know that there is a negative
 action every time they bark.</p>
 
 <p class=MsoNormal>There would need to be a collar that was fitted out with a
 temp sensor, a bark sensor (there are currently collars on the market that
 already have this) and there would need to be a Bluetooth antenna in the collar
-and someway in the collar to store the data.  Then there would be an app to transfer
+and someway in the collar to store the data.Â  Then there would be an app to transfer
 the data to and collate and report. The collar would sync with Bluetooth like a
-fit bit and transfer the data.  </p>
+fit bit and transfer the data.Â  </p>
 
 <p class=MsoNormal>Someone with software skills would need to write the data
-collection app.  This app will have a report output function to provide to
-council or the owner.   </p>
+collection app.Â  This app will have a report output function to provide to
+council or the owner. Â Â </p>
 
 <p class=MsoNormal>The collar would be custom made, so someone with hardware
 knowledge is going to be required. The collar would contain things like:</p>
@@ -287,14 +287,14 @@ href="https://www.ifixit.com/Teardown/Fitbit+Flex+Teardown/16050">https://www.if
 </p>
 
 <p class=MsoNormal>So it is entirely possible to build something like this, but
-someone with a high degree of hardware knowledge would be required.  Someone
-with electrical engineering experience.  Or, someone who might be able to use
+someone with a high degree of hardware knowledge would be required.Â  Someone
+with electrical engineering experience.Â  Or, someone who might be able to use
 an existing hardware technology and customise to our needs.</p>
 
 <p class=MsoNormal>Having a collar that knows how long it has been on a dog,
 when the dog barked and how often would mean that objective data can be
 provided to determine the level of nuisance without wondering if people are
-filling out data correctly.  </p>
+filling out data correctly.Â  </p>
 
 </div>
 
