Embed image file

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ href="https://www.glassdoor.com.au/job-listing/senior-data-analyst-scientist-int
 
 <p class=MsoNormal><img border=0 width=624 height=313 id="Picture 1"
 src="https://photos.app.goo.gl/XBipbfdoQ5eoSCTv9"></p>
+	<a href='https://photos.google.com/share/AF1QipOjmDL5mPZ0H_4DcVFssKUmKVjWB1cP3lE1EJn1jJXcNENIBLbdi9Qi1tK8T3X_dw?key=anVzX2JGT0hKT2JWUVIyRHppTXF6cGFqLUVHQnJB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/934XUEBGRkWfn16IpdHP3U2-WQgsLcTYlTaDuVmX5RIc324U64HveeN44SVqvv0HX2bQP0j1_Jg5_wezlJSbo1p5ELz-Fhemo_H4Ox8sWkmcFdiBenu7xPifnapvR2tsLIbjdndxHg=w2400' /></a>
 
 <p class=MsoNormal>&nbsp;</p>
 
